[package]
name = "guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
http = "1.0.0"
json = "0.12.4"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
sentry = "0.32.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
timer = "0.2.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
